# beerdex

./: .gitignore  CMakeLists.txt  README.md  beer.cpp  bottles.model
BeerCaddy/BeerCaddy/: AppDelegate.h  AppDelegate.m  BeerCaddy-Info.plist  BeerCaddy-Prefix.pch  BeerClassifier.cpp  BeerClassifier.h  BeerList.h  BeerList.m  Beers.h  FlipsideViewController.h  FlipsideViewController.m  MainViewController.h  MainViewController.mm  Makefile  S3DAO.h  S3DAO.m  TagUploadViewController.h  TagUploadViewController.m  bottles88.model  bottles_88.model  bottles_all.model  cmake_install.cmake  main.m
BeerCaddy/BeerCaddy.xcodeproj/: project.pbxproj
BeerCaddy/BeerCaddy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BeerCaddy/BeerCaddy/en.lproj/: MainStoryboard.storyboard
BeerCaddy/BeerCaddyTests/: BeerCaddyTests.h  BeerCaddyTests.m  BeerCaddyTests.mm
Beerdex/Beerdex/: AppDelegate.m  BeerClassifier.cpp  BeerClassifier.h  Beerdex-Info.plist  Beerdex-Prefix.pch  Beers.h  MainViewController.mm  Makefile  S3DAO.h  S3DAO.m  bottles.model  main.m
Beerdex/Beerdex.xcodeproj/: project.pbxproj
Beerdex/Beerdex.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Beerdex/Beerdex/en.lproj/: MainStoryboard.storyboard
Beerdex/BeerdexTests/: BeerdexTests.h  BeerdexTests.mm
Beerdex/aws-ios-sdk-1.4.4/AWSPersistence.framework/Versions/A/: AWSPersistence
Beerdex/aws-ios-sdk-1.4.4/AWSPersistence.framework/Versions/A/Resources/: Info.plist
data/: get_pics.py
tester/: CMakeLists.txt  tester.cpp
trainer/: CMakeLists.txt  bottles_88.model  trainer.cpp
validate/: CMakeLists.txt  validate.cpp
